# rtori

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresetsCommon.json  Cargo.toml  DEBUGGING.md  LICENSE.txt  README.md  rtori_core.cps
core/core/: Cargo.toml  README.md  interface.udl
core/core-ffi/: Cargo.toml
core/core-ffi/scripts/: cps.json  generate.py
core/core-ffi/src/: context.rs  fold.rs  lib.rs  solver.rs
core/core/src/: lib.rs  os_solver.rs
core/core/testdata/diagonal/: diagonal-cp_0.fold
core/core/testdata/simple/: simple_-100.fold
core/core/testdata/simpleVertex/: simpleVertex_-50.fold
core/core/tests/: fold_solving.rs
core/fold/: Cargo.toml
core/fold/src/: collections.rs  common.rs  edges.rs  faces.rs  frame.rs  handful.rs  indices.rs  layers.rs  lib.rs  lockstep.rs  macros.rs  vertices.rs
core/fold/src/deser/: mod.rs  shim.rs
core/fold/src/file/: edges.rs  faces.rs  layers.rs  metadata.rs  mod.rs  vertices.rs
core/fold/testdata/: one_vertex.fold
core/os/simd/: Cargo.toml  README.md
core/os/simd/src/: extractor.rs  lib.rs  loader.rs  owned.rs  process.rs  runner.rs
core/simd-common/: Cargo.toml
core/simd-common/src/: aosoa.rs  convert_nalgebra.rs  gather.rs  lib.rs  select.rs
fold/: Cargo.toml
fold/src/: common.rs  edges.rs  faces.rs  frame.rs  handful.rs  indices.rs  layers.rs  lib.rs  lockstep.rs  macros.rs  vertices.rs
fold/testdata/: 13-horns-123-vertices.fold  simple.fold
rtori-core/: Cargo.toml  README.md  debugging
rtori-core-ext/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen_c.toml  cbindgen_cpp.toml  rtori.h
rtori-core-ext/include/rtori/: attributes.h
rtori-core-ext/src/: allocator.rs  context.rs  lib.rs
rtori-core-ext/src/fold/: mod.rs  transformed.rs
rtori-core-ext/src/output/: mod.rs
rtori-core-ext/src/solver/: extract.rs  mod.rs
rtori-core-simd/: Cargo.toml  README.md
rtori-core-simd/src/: extractor.rs  lib.rs  loader.rs  model.rs  owned.rs  process.rs  simd_atoms.rs
rtori-core-simd/src/kernels/: a_per_face.rs  algebra.rs  ba_per_crease_fold_angles.rs  bb_per_crease_physics.rs  ca_per_node_crease.rs  cb_per_node_beam.rs  cc_per_node_face.rs  d_per_node.rs  e_per_node.rs  gather.rs  mod.rs  position.rs
rtori-core-simd/src/kernels/input_iterator/: mod.rs
rtori-core-simd/src/kernels/operations/: algebra.rs  debug.rs  gather.rs  mod.rs  position.rs  reduce.rs  reduce_with_error.rs  select.rs
rtori-core-simd/src/model/: aosoa.rs  crease_face_indices.rs  crease_neighbourhood.rs  crease_physics.rs  mod.rs  node_beam_spec.rs  node_crease_pointers.rs  node_geometry.rs
rtori-core-wgpu/: Cargo.toml  README.md
rtori-core-wgpu/shaders/: 0-PerFace-CalculateNormal.wgsl  1-PerCrease-FoldAngles.wgsl  1-PerCrease-Physics.wgsl  2a0-PerNodeCrease.wgsl  2b0-PerNodeBeam.wgsl  2c0-PerNodeFace.wgsl  3-PerNode-Accumulate.wgsl
rtori-core-wgpu/src/: bind_groups.rs  extractor.rs  extractor_gpu.rs  input.rs  lib.rs  loader.rs  model_size.rs  state.rs  uniform_buffers.rs
rtori-core-wgpu/src/layout/: mod.rs  pass.rs  pass_per_crease_fold_angle.rs  pass_per_crease_physics.rs  pass_per_face.rs  pass_per_node_accumulate.rs  pass_per_node_beam.rs  pass_per_node_crease.rs  pass_per_node_face.rs
rtori-core-wgpu/src/layout/bgld/: per_crease_common.rs  (+1 more)
rtori-core-wgpu/src/storage_buffers/: backing_storage_buffer.rs  parameters.rs  storage_bindings.rs
rtori-core/benches/: simple.rs
rtori-core/src/: gpu.rs  lib.rs  os_solver.rs
rtori-core/testdata/diagonal/: diagonal-cp_-100.fold  diagonal-cp_-25.fold  diagonal-cp_-50.fold  diagonal-cp_-75.fold  diagonal-cp_0.fold  diagonal-cp_100.fold  diagonal-cp_25.fold  diagonal-cp_50.fold  diagonal-cp_75.fold
rtori-core/testdata/simple/: simple_-25.fold  simple_-50.fold  simple_0.fold  simple_100.fold  simple_25.fold  simple_50.fold
rtori-core/testdata/simpleVertex/: simpleVertex_-100.fold  simpleVertex_-75.fold  simpleVertex_0.fold  simpleVertex_50.fold
rtori-core/tests/: fold_solving.rs  simple.rs
rtori-os-fold-importer/: Cargo.toml
rtori-os-fold-importer/src/: crease_extraction.rs  creases.rs  fold_input.rs  input.rs  lib.rs  preprocess.rs  transform.rs  triangulation.rs
rtori-os-fold-importer/src/crease_geometry/: dt.rs  load.rs  mod.rs
rtori-os-fold-importer/src/preprocess/: dt.rs  mod.rs
rtori-os-fold-importer/src/supplement/: mod.rs
rtori-os-fold-importer/src/transform/: mod.rs
rtori-os-fold-importer/testdata/: simple.json  simple.jsonc
rtori-os-fold-importer/tests/: simple.rs
rtori-os-fold-importer/tests/store/: mod.rs
rtori-os-model/: Cargo.toml
rtori-os-model/src/: extract_flags.rs  extractor.rs  lib.rs  loader.rs  model.rs  proxy.rs
rtori-os/fold-importer/: Cargo.toml
rtori-os/fold-importer/src/: lib.rs
rtori-os/model/: Cargo.toml
rtori-os/model/src/: extract_flags.rs  extractor.rs
rtori-server/: Cargo.toml
rtori-server/src/: main.rs  serialized.rs
rtori-touchdesigner/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  TROUBLESHOOTING.md  shell.nix
rtori-touchdesigner/components/: RTOriSimulateCOMP.tox
rtori-touchdesigner/plugins/: CMakeLists.txt
rtori-touchdesigner/plugins/RTOriBridge/: CMakeLists.txt  README.md
rtori-touchdesigner/plugins/RTOriSimulateCommon/: CMakeLists.txt
rtori-touchdesigner/plugins/RTOriSimulateSOP/: CMakeLists.txt
rtori-touchdesigner/plugins/RTOriSimulateShared/: CMakeLists.txt
rtori-touchdesigner/plugins/TouchDesigner/: CMakeLists.txt
rtori-touchdesigner/sample/: .gitignore  sample.toe
rtori-touchdesigner/sample/FoldFiles/: 13-horns-123-vertices-augmented-triangulated.fold  13-horns-123-vertices-augmented.fold
rtori-touchdesigner/src/: CMakeLists.txt  Info.plist.in
rtori-touchdesigner/src/common/: CMakeLists.txt
rtori-touchdesigner/src/fold/: CMakeLists.txt
rtori-touchdesigner/src/simulate/: CMakeLists.txt
rtori-touchdesigner/tools/macOS/: print_dyld.sh
xtask/: Cargo.toml
xtask/resources/: CMakeLists.txt.in  CheckABI.cmake
xtask/src/: main.rs
(+196 files in other folders)
