cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "fold",
    # "rtori-core-wgpu", 
    "rtori-core-simd",
    "rtori-server",
    # "rtori-cli",
    "rtori-os-fold-importer",
    "rtori-core",
    "rtori-core-ext",
    "rtori-os-model",
    "rtori-core-ffi",
    "rtori-os/interface",
    "xtask"
]

#[patch.crates-io]
#diplomat = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-runtime = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat_core = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-tool = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
debug = true

[profile.bench]
inherits = "release"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
