cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "fold",
    "rtori-server",
    # "rtori-cli",
    "rtori-core",
    "rtori-core-ext",
    "rtori-os/model",
    "rtori-os/interface",
    "rtori-os/simd",
    "rtori-os/fold-importer",
    #"rtori-os/wgpu"
    "xtask"
, "simd-common"]

#[patch.crates-io]
#diplomat = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-runtime = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat_core = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-tool = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
debug = true

[profile.bench]
inherits = "release"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
