cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    # "rtori-cli",
    "core/fold",
    "core/core",
    "core/core-ffi",
    "core/simd-common",
    "core/os/model",
    "core/os/simd",
    "core/os/fold-importer",
    #"core/os//wgpu"
    "xtask"]

[patch.crates-io]
simba = { git = 'https://github.com/dimforge/simba.git', branch = "master"}
bumpalo = { git = 'https://github.com/aabizri/bumpalo.git', branch = "main" }
serde-seeded = { git = 'https://github.com/aabizri/serde-seeded-rs.git', branch = "main"}
#diplomat = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-runtime = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat_core = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }
#diplomat-tool = { git = 'https://github.com/aabizri/diplomat.git', branch = "feature-custom-allocators" }

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
debug = true

[profile.bench]
inherits = "release"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
