[package]
name = "rtori-core-ext"
description = "rtori as a c library (either shared or static)"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtori_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
bitflags = "2.6.0"
rtori-core = {path = "../rtori-core"}

[build-dependencies]
cbindgen = "^0.27.0"
