[package]
name = "rtori-core-ext"
description = "rtori as a c library (either shared or static)"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtori_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
bitflags = "2.6.0"
rtori-core = {path = "../rtori-core"}
fold = {path = "../fold"}
pkg-version = "1.0.0"
serde_json = {version = "1.0.128", default-features = false, features = ["alloc"]}
pollster = "0.3.0"
static_assertions = "1.1.0"
bytemuck = "1.18.0"
#itertools = "0.13.0"

#[build-dependencies]
#cbindgen = "^0.27.0"
