[package]
name = "rtori-core-simd"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = {version = "0.13.0",  default-features = false}
nalgebra = "0.33.0"
simba = { version = "0.9.0", features = ["portable_simd"] }
rtori-os-model = {path = "../rtori-os-model"}
bytemuck = { version = "1.18.0", features = ["nightly_portable_simd"]}
cfg-if = "1.0.0"