[package]
name = "rtori-core"
version = "0.1.0"
edition = "2021"

[features]
cpu = ["dep:rtori-core-simd"]

# GPU-specific
vulkan = ["gpu", "rtori-core-wgpu/vulkan"]
metal = ["gpu", "rtori-core-wgpu/metal"]
dx12 = ["gpu", "rtori-core-wgpu/dx12"]
webgpu = ["gpu", "rtori-core-wgpu/webgpu"]
gpu_native = ["gpu", "vulkan", "metal", "dx12"]
gpu_web = ["gpu", "webgpu"]
gpu = ["dep:rtori-core-wgpu"]

default = ["cpu"] #, "cpu"]

[dependencies]
fold = {path = "../fold"}
rtori-core-simd = {path = "../rtori-core-simd", optional = true, feature = ["alloc"]}
rtori-core-wgpu = {path = "../rtori-core-wgpu", optional = true}
rtori-os-fold-importer = {path = "../rtori-os-fold-importer"}
rtori-os-model = {path = "../rtori-os-model"}
bitflags = "2.6.0"
serde_json = {version = "1.0.128", default-features = false, features = ["alloc"]}

[dev-dependencies]
pollster = "0.3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.24.0"
rstest_reuse = "0.7.0"

# To enable tracing
tracing-subscriber = "0.3.19"

[[bench]]
name = "simple"
harness = false

# for dx12_interop
# windows = {version = "0.58", default-features = false, optional = true}

