[package]
name = "rtori-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["channel"] }
serde = { version = "1.0.208", features = ["derive", "std"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.23.1"
