[package]
name = "rtori-core-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtori_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
diplomat = "0.9.0"
diplomat-runtime = "0.9.0"
bytemuck = "1.18.0"
pollster = "0.3.0"

serde_json = {version = "1.0.128", default-features = false, features = ["alloc"]}
rtori-core = {path = "../core"}
fold = {path = "../fold"}