[package]
name = "rtori-core-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtori_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
diplomat = "0.13.0"
diplomat-runtime = "0.13.0"
bytemuck = "1.18.0"
pollster = "0.4.0"
postcard = {version = "1.1.3", features = ["alloc"]}
self_cell = "1.2.0"
num-traits = "0.2.19"

serde_json = {version = "1.0.128", default-features = false, features = ["alloc"]}
rtori-core = {path = "../core"}
fold = {path = "../fold"}
