[package]
name = "fold"
version = "0.1.0"
edition = "2021"

[feature]
bytemuck = ["dep:bytemuck"]

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.207", default-features = false, features = ["derive", "std"] }
serde_repr = {version = "0.1.20", default-features = false}
tinyvec = { version = "1.8.0", default-features = false, features = ["alloc", "serde", "std"] }
bytemuck = { version= "1.18.0", default-features = false, features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0.125"
