[package]
name = "simd-common"
version = "0.1.0"
edition = "2024"

[features]
nalgebra = ["dep:nalgebra", "dep:simba"]
default = []

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"

nalgebra = {version = "0.33.0", optional = true }
simba = { version = "0.9.0", features = ["portable_simd"], optional = true }

bytemuck = { version = "1.18.0", features = ["nightly_portable_simd"]}