[package]
name = "rtori-os-simd"
version = "0.1.0"
edition = "2021"

[features]
alloc = []
# tmp
default = ["alloc"]

[dependencies]
itertools = {version = "0.14.0",  default-features = false}
nalgebra = "0.34.0"
simba = { version = "0.9.1", features = ["portable_simd"] }
rtori-os-model = {path = "../model"}
bytemuck = { version = "1.18.0", features = ["nightly_portable_simd"]}
cfg-if = "1.0.0"
num-traits = "0.2.19"
static_assertions = "1.1.0"
tracing = { version = "0.1.41" }
sleef = {version = "0.3.2", default-features = false}
simd-common = {path = "../../simd-common", features = ["nalgebra"]}